--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -37,7 +37,7 @@
 
 ;; Define an insn type attribute.  This is used in function unit delay
 ;; computations.
-(define_attr "type" "integer,load,store,fpload,fpstore,imul,lmul,idiv,ldiv,branch,compare,delayed_compare,fpcompare,mtjmpr,fp,dmul,sdiv,ddiv,ssqrt,dsqrt,jmpreg"
+(define_attr "type" "integer,load,store,fpload,fpstore,imul,lmul,idiv,ldiv,branch,compare,cr_logical,delayed_compare,fpcompare,mtjmpr,fp,dmul,sdiv,ddiv,ssqrt,dsqrt,jmpreg"
   (const_string "integer"))
 
 ;; Length (in bytes).
@@ -47,8 +47,8 @@
 				       (const_int -32768))
 				   (lt (minus (pc) (match_dup 0))
 				       (const_int 32767)))
-			      (const_int 8)
-			      (const_int 12))
+			      (const_int 4)
+			      (const_int 8))
 		(const_int 4)))
 
 ;; Processor type -- this attribute must exactly match the processor_type
@@ -121,6 +121,11 @@
 (define_function_unit "iu" 1 0
   (and (eq_attr "type" "integer")
        (eq_attr "cpu" "rios1,rs64a,mpccore,ppc403,ppc601,ppc603"))
+  1 1)
+
+(define_function_unit "iu" 1 0
+  (and (eq_attr "type" "cr_logical")
+       (eq_attr "cpu" "rios1,rs64a,mpccore,ppc403,ppc601"))
   1 1)
 
 (define_function_unit "iu" 1 0
@@ -288,6 +293,15 @@
        (eq_attr "cpu" "ppc750"))
   19 19)
 
+; CR-logical operations are execute-serialized, that is they don't
+; start (and block the function unit) until all preceding operations
+; have finished.  They don't block dispatch of other insns, though.
+; I've imitated this by giving them longer latency.
+(define_function_unit "sru" 1 0 
+  (and (eq_attr "type" "cr_logical")
+       (eq_attr "cpu" "ppc603,ppc750"))
+  3 2)
+
 ; compare is done on integer unit, but feeds insns which
 ; execute on the branch unit.
 (define_function_unit "iu" 1 0   
@@ -356,6 +370,17 @@
   (and (eq_attr "type" "mtjmpr")
        (eq_attr "cpu" "rs64a,mpccore,ppc403,ppc601,ppc603,ppc604,ppc604e,ppc620,ppc750"))
   4 1)
+
+(define_function_unit "bpu" 1 0
+  (and (eq_attr "type" "cr_logical")
+       (eq_attr "cpu" "ppc604,ppc620"))
+  4 1)
+  
+(define_function_unit "cru" 1 0
+  (and (eq_attr "type" "cr_logical")
+       (eq_attr "cpu" "ppc604e"))
+  4 1)
+  
 
 ; all jumps/branches are executing on the bpu, in 1 cycle, for all machines.
 (define_function_unit "bpu" 1 0
@@ -9847,270 +9872,94 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
 }")
 
 (define_expand "beq"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (eq (match_dup 2)
-			  (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ enum machine_mode mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
-  operands[1] = gen_rtx_COMPARE (mode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (mode);
-}")
+  "{ rs6000_emit_cbranch (EQ, operands[0]); DONE; }")
 
 (define_expand "bne"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (ne (match_dup 2)
-			  (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ enum machine_mode mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
-  operands[1] = gen_rtx_COMPARE (mode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (mode);
-}")
-
-(define_expand "blt"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (lt (match_dup 2)
-			  (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
-  ""
-  "
-{ enum machine_mode mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
-  operands[1] = gen_rtx_COMPARE (mode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (mode);
-}")
-
-(define_expand "bgt"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (gt (match_dup 2)
-			  (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
-  ""
-  "
-{ enum machine_mode mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
-  operands[1] = gen_rtx_COMPARE (mode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (mode);
-}")
-
-(define_expand "ble"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (le (match_dup 2)
-			  (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
-  ""
-  "
-{ enum machine_mode mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
-  operands[1] = gen_rtx_COMPARE (mode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (mode);
-}")
+  "{ rs6000_emit_cbranch (NE, operands[0]); DONE; }")
 
 (define_expand "bge"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (ge (match_dup 2)
-			  (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ enum machine_mode mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
-  operands[1] = gen_rtx_COMPARE (mode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (mode);
-}")
+  "{ rs6000_emit_cbranch (GE, operands[0]); DONE; }")
 
-(define_expand "bgtu"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (gtu (match_dup 2)
-			   (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+(define_expand "bgt"
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ operands[1] = gen_rtx_COMPARE (CCUNSmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCUNSmode);
-}")
+  "{ rs6000_emit_cbranch (GT, operands[0]); DONE; }")
 
-(define_expand "bltu"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (ltu (match_dup 2)
-			   (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+(define_expand "ble"
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ operands[1] = gen_rtx_COMPARE (CCUNSmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCUNSmode);
-}")
+  "{ rs6000_emit_cbranch (LE, operands[0]); DONE; }")
+
+(define_expand "blt"
+  [(use (match_operand 0 "" ""))]
+  ""
+  "{ rs6000_emit_cbranch (LT, operands[0]); DONE; }")
 
 (define_expand "bgeu"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (geu (match_dup 2)
-			   (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ operands[1] = gen_rtx_COMPARE (CCUNSmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCUNSmode);
-}")
+  "{ rs6000_emit_cbranch (GEU, operands[0]); DONE; }")
+
+(define_expand "bgtu"
+  [(use (match_operand 0 "" ""))]
+  ""
+  "{ rs6000_emit_cbranch (GTU, operands[0]); DONE; }")
 
 (define_expand "bleu"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (leu (match_dup 2)
-			   (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ operands[1] = gen_rtx_COMPARE (CCUNSmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCUNSmode);
-}")
+  "{ rs6000_emit_cbranch (LEU, operands[0]); DONE; }")
+
+(define_expand "bltu"
+  [(use (match_operand 0 "" ""))]
+  ""
+  "{ rs6000_emit_cbranch (LTU, operands[0]); DONE; }")
 
 (define_expand "bunordered"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (unordered (match_dup 2)
-			         (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ if (!rs6000_compare_fp_p) FAIL;
-  operands[1] = gen_rtx_COMPARE (CCFPmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCFPmode);
-}")
+  "{ rs6000_emit_cbranch (UNORDERED, operands[0]); DONE; }")
 
 (define_expand "bordered"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (ordered (match_dup 2)
-			       (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ if (!rs6000_compare_fp_p) FAIL;
-  operands[1] = gen_rtx_COMPARE (CCFPmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCFPmode);
-}")
+  "{ rs6000_emit_cbranch (ORDERED, operands[0]); DONE; }")
 
 (define_expand "buneq"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (uneq (match_dup 2)
-			    (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ if (!rs6000_compare_fp_p) FAIL;
-  operands[1] = gen_rtx_COMPARE (CCFPmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCFPmode);
-}")
+  "{ rs6000_emit_cbranch (UNEQ, operands[0]); DONE; }")
 
 (define_expand "bunge"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (unge (match_dup 2)
-			    (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ if (!rs6000_compare_fp_p) FAIL;
-  operands[1] = gen_rtx_COMPARE (CCFPmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCFPmode);
-}")
+  "{ rs6000_emit_cbranch (UNGE, operands[0]); DONE; }")
 
 (define_expand "bungt"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (ungt (match_dup 2)
-			    (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ if (!rs6000_compare_fp_p) FAIL;
-  operands[1] = gen_rtx_COMPARE (CCFPmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCFPmode);
-}")
+  "{ rs6000_emit_cbranch (UNGT, operands[0]); DONE; }")
 
 (define_expand "bunle"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (unle (match_dup 2)
-			    (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ if (!rs6000_compare_fp_p) FAIL;
-  operands[1] = gen_rtx_COMPARE (CCFPmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCFPmode);
-}")
+  "{ rs6000_emit_cbranch (UNLE, operands[0]); DONE; }")
 
 (define_expand "bunlt"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (unlt (match_dup 2)
-			    (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ if (!rs6000_compare_fp_p) FAIL;
-  operands[1] = gen_rtx_COMPARE (CCFPmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCFPmode);
-}")
+  "{ rs6000_emit_cbranch (UNLT, operands[0]); DONE; }")
 
 (define_expand "bltgt"
-  [(set (match_dup 2) (match_dup 1))
-   (set (pc)
-	(if_then_else (ltgt (match_dup 2)
-			    (const_int 0))
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
+  [(use (match_operand 0 "" ""))]
   ""
-  "
-{ if (!rs6000_compare_fp_p) FAIL;
-  operands[1] = gen_rtx_COMPARE (CCFPmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCFPmode);
-}")
+  "{ rs6000_emit_cbranch (LTGT, operands[0]); DONE; }")
 
 ;; For SNE, we would prefer that the xor/abs sequence be used for integers.
 ;; For SEQ, likewise, except that comparisons with zero should be done
@@ -10118,261 +9967,85 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
 ;; resulting insns, we must, in fact, allow SEQ for integers.  Fail in
 ;; the cases we don't want to handle.
 (define_expand "seq"
-  [(set (match_dup 2) (match_dup 1))
-   (set (match_operand:SI 0 "gpc_reg_operand" "")
-	(eq:SI (match_dup 2) (const_int 0)))]
+  [(clobber (match_operand:SI 0 "gpc_reg_operand" ""))]
   ""
-  "
-{ enum machine_mode op_mode, mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
-  operands[1] = gen_rtx_COMPARE (mode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (mode);
-
-  op_mode = GET_MODE (rs6000_compare_op0);
-  if (op_mode == VOIDmode)
-    op_mode = GET_MODE (rs6000_compare_op1);
-
-  if (TARGET_POWERPC64 && (op_mode == DImode || rs6000_compare_fp_p))
-    {
-      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
-      convert_move (operands[0],
-		    gen_rtx_EQ (DImode, operands[2], const0_rtx), 0);
-      DONE;
-    }
-}")
+  "{ rs6000_emit_sCOND (EQ, operands[0]); DONE; }")
 
 (define_expand "sne"
-  [(set (match_dup 2) (match_dup 1))
-   (set (match_operand:SI 0 "gpc_reg_operand" "")
-	(ne:SI (match_dup 2) (const_int 0)))]
+  [(clobber (match_operand:SI 0 "gpc_reg_operand" ""))]
   ""
   "
-{ if (! rs6000_compare_fp_p)
+{ 
+  if (! rs6000_compare_fp_p)
     FAIL;
 
-  operands[1] = gen_rtx_COMPARE (CCFPmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCFPmode);
-
-  if (TARGET_POWERPC64)
-    {
-      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
-      convert_move (operands[0],
-		    gen_rtx_NE (DImode, operands[2], const0_rtx), 0);
-      DONE;
-    }
+  rs6000_emit_sCOND (NE, operands[0]); 
+  DONE;
 }")
 
 ;; A > 0 is best done using the portable sequence, so fail in that case.
 (define_expand "sgt"
-  [(set (match_dup 2) (match_dup 1))
-   (set (match_operand:SI 0 "gpc_reg_operand" "")
-	(gt:SI (match_dup 2) (const_int 0)))]
+  [(clobber (match_operand:SI 0 "gpc_reg_operand" ""))]
   ""
   "
-{ enum machine_mode op_mode, mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
-
+{ 
   if (! rs6000_compare_fp_p && rs6000_compare_op1 == const0_rtx)
     FAIL;
 
-  operands[1] = gen_rtx_COMPARE (mode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (mode);
-
-  op_mode = GET_MODE (rs6000_compare_op0);
-  if (op_mode == VOIDmode)
-    op_mode = GET_MODE (rs6000_compare_op1);
-
-  if (TARGET_POWERPC64 && (op_mode == DImode || rs6000_compare_fp_p))
-    {
-      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
-      convert_move (operands[0],
-		    gen_rtx_GT (DImode, operands[2], const0_rtx), 0);
-      DONE;
-    }
+  rs6000_emit_sCOND (GT, operands[0]); 
+  DONE;
 }")
 
 ;; A < 0 is best done in the portable way for A an integer.
 (define_expand "slt"
-  [(set (match_dup 2) (match_dup 1))
-   (set (match_operand:SI 0 "gpc_reg_operand" "")
-	(lt:SI (match_dup 2) (const_int 0)))]
+  [(clobber (match_operand:SI 0 "gpc_reg_operand" ""))]
   ""
   "
-{ enum machine_mode op_mode, mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
-
+{ 
   if (! rs6000_compare_fp_p && rs6000_compare_op1 == const0_rtx)
     FAIL;
 
-  operands[1] = gen_rtx_COMPARE (mode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (mode);
-
-  op_mode = GET_MODE (rs6000_compare_op0);
-  if (op_mode == VOIDmode)
-    op_mode = GET_MODE (rs6000_compare_op1);
-
-  if (TARGET_POWERPC64 && (op_mode == DImode || rs6000_compare_fp_p))
-    {
-      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
-      convert_move (operands[0],
-		    gen_rtx_LT (DImode, operands[2], const0_rtx), 0);
-      DONE;
-    }
+  rs6000_emit_sCOND (LT, operands[0]); 
+  DONE;
 }")
 
 (define_expand "sge"
-  [(set (match_dup 2) (match_dup 1))
-   (set (match_operand:SI 0 "gpc_reg_operand" "")
-	(ge:SI (match_dup 2) (const_int 0)))]
+  [(clobber (match_operand:SI 0 "gpc_reg_operand" ""))]
   ""
-  "
-{ enum machine_mode op_mode, mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
-  operands[1] = gen_rtx_COMPARE (mode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (mode);
-
-  op_mode = GET_MODE (rs6000_compare_op0);
-  if (op_mode == VOIDmode)
-    op_mode = GET_MODE (rs6000_compare_op1);
-
-  if (TARGET_POWERPC64 && (op_mode == DImode || rs6000_compare_fp_p))
-    {
-      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
-      convert_move (operands[0],
-		    gen_rtx_GE (DImode, operands[2], const0_rtx), 0);
-      DONE;
-    }
-}")
+  "{ rs6000_emit_sCOND (GE, operands[0]); DONE; }")
 
 ;; A <= 0 is best done the portable way for A an integer.
 (define_expand "sle"
-  [(set (match_dup 2) (match_dup 1))
-   (set (match_operand:SI 0 "gpc_reg_operand" "")
-	(le:SI (match_dup 2) (const_int 0)))]
+  [(clobber (match_operand:SI 0 "gpc_reg_operand" ""))]
   ""
   "
-{ enum machine_mode op_mode, mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
-
+{ 
   if (! rs6000_compare_fp_p && rs6000_compare_op1 == const0_rtx)
     FAIL;
 
-  operands[1] = gen_rtx_COMPARE (mode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (mode);
-
-  op_mode = GET_MODE (rs6000_compare_op0);
-  if (op_mode == VOIDmode)
-    op_mode = GET_MODE (rs6000_compare_op1);
-
-  if (TARGET_POWERPC64 && (op_mode == DImode || rs6000_compare_fp_p))
-    {
-      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
-      convert_move (operands[0],
-		    gen_rtx_LE (DImode, operands[2], const0_rtx), 0);
-      DONE;
-    }
+  rs6000_emit_sCOND (LE, operands[0]); 
+  DONE;
 }")
 
 (define_expand "sgtu"
-  [(set (match_dup 2) (match_dup 1))
-   (set (match_operand:SI 0 "gpc_reg_operand" "")
-	(gtu:SI (match_dup 2) (const_int 0)))]
+  [(clobber (match_operand:SI 0 "gpc_reg_operand" ""))]
   ""
-  "
-{ enum machine_mode op_mode;
-
-  operands[1] = gen_rtx_COMPARE (CCUNSmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCUNSmode);
-
-  op_mode = GET_MODE (rs6000_compare_op0);
-  if (op_mode == VOIDmode)
-    op_mode = GET_MODE (rs6000_compare_op1);
-
-  if (TARGET_POWERPC64 && op_mode == DImode)
-    {
-      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
-      convert_move (operands[0],
-		    gen_rtx_GTU (DImode, operands[2], const0_rtx), 0);
-      DONE;
-    }
-}")
+  "{ rs6000_emit_sCOND (GTU, operands[0]); DONE; }")
 
 (define_expand "sltu"
-  [(set (match_dup 2) (match_dup 1))
-   (set (match_operand:SI 0 "gpc_reg_operand" "")
-	(ltu:SI (match_dup 2) (const_int 0)))]
+  [(clobber (match_operand:SI 0 "gpc_reg_operand" ""))]
   ""
-  "
-{ enum machine_mode op_mode;
-
-  operands[1] = gen_rtx_COMPARE (CCUNSmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCUNSmode);
-
-  op_mode = GET_MODE (rs6000_compare_op0);
-  if (op_mode == VOIDmode)
-    op_mode = GET_MODE (rs6000_compare_op1);
-
-  if (TARGET_POWERPC64 && op_mode == DImode)
-    {
-      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
-      convert_move (operands[0],
-		    gen_rtx_LTU (DImode, operands[2], const0_rtx), 0);
-      DONE;
-    }
-}")
+  "{ rs6000_emit_sCOND (LTU, operands[0]); DONE; }")
 
 (define_expand "sgeu"
-  [(set (match_dup 2) (match_dup 1))
-   (set (match_operand:SI 0 "gpc_reg_operand" "")
-	(geu:SI (match_dup 2) (const_int 0)))]
+  [(clobber (match_operand:SI 0 "gpc_reg_operand" ""))]
   ""
-  "
-{ enum machine_mode op_mode;
-
-  operands[1] = gen_rtx_COMPARE (CCUNSmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCUNSmode);
-
-  op_mode = GET_MODE (rs6000_compare_op0);
-  if (op_mode == VOIDmode)
-    op_mode = GET_MODE (rs6000_compare_op1);
-
-  if (TARGET_POWERPC64 && op_mode == DImode)
-    {
-      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
-      convert_move (operands[0],
-		    gen_rtx_GEU (DImode, operands[2], const0_rtx), 0);
-      DONE;
-    }
-}")
+  "{ rs6000_emit_sCOND (GEU, operands[0]); DONE; }")
 
 (define_expand "sleu"
-  [(set (match_dup 2) (match_dup 1))
-   (set (match_operand:SI 0 "gpc_reg_operand" "")
-	(leu:SI (match_dup 2) (const_int 0)))]
+  [(clobber (match_operand:SI 0 "gpc_reg_operand" ""))]
   ""
-  "
-{ enum machine_mode op_mode;
-
-  operands[1] = gen_rtx_COMPARE (CCUNSmode,
-				 rs6000_compare_op0, rs6000_compare_op1);
-  operands[2] = gen_reg_rtx (CCUNSmode);
-
-  op_mode = GET_MODE (rs6000_compare_op0);
-  if (op_mode == VOIDmode)
-    op_mode = GET_MODE (rs6000_compare_op1);
-
-  if (TARGET_POWERPC64 && op_mode == DImode)
-    {
-      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
-      convert_move (operands[0],
-		    gen_rtx_LEU (DImode, operands[2], const0_rtx), 0);
-      DONE;
-    }
-}")
+  "{ rs6000_emit_sCOND (LEU, operands[0]); DONE; }")
 
 ;; Here are the actual compare insns.
 (define_insn "*cmpsi_internal1"
@@ -10631,38 +10304,6 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
 	(compare:CC (match_dup 4)
 		    (const_int 0)))]
   "")
-
-;; If we are comparing the result of two comparisons, this can be done
-;; using creqv or crxor.
-
-(define_insn ""
-  [(set (match_operand:CCEQ 0 "cc_reg_operand" "=y")
-	(compare:CCEQ (match_operator 1 "scc_comparison_operator"
-			      [(match_operand 2 "cc_reg_operand" "y")
-			       (const_int 0)])
-		      (match_operator 3 "scc_comparison_operator"
-			      [(match_operand 4 "cc_reg_operand" "y")
-			       (const_int 0)])))]
-  "REGNO (operands[2]) != REGNO (operands[4])"
-  "*
-{
-  enum rtx_code code1, code2;
-
-  code1 = GET_CODE (operands[1]);
-  code2 = GET_CODE (operands[3]);
-
-  if ((code1 == EQ || code1 == LT || code1 == GT
-       || code1 == LTU || code1 == GTU
-       || (code1 != NE && GET_MODE (operands[2]) == CCFPmode))
-      !=
-      (code2 == EQ || code2 == LT || code2 == GT
-       || code2 == LTU || code2 == GTU
-       || (code2 != NE && GET_MODE (operands[4]) == CCFPmode)))
-    return \"%C1%C3crxor %E0,%j1,%j3\";
-  else
-    return \"%C1%C3creqv %E0,%j1,%j3\";
-}"
-  [(set_attr "length" "12")])
 
 ;; There is a 3 cycle delay between consecutive mfcr instructions
 ;; so it is useful to combine 2 scc instructions to use only one mfcr.
@@ -13153,7 +12794,7 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
   return output_cbranch (operands[0], NULL, 0, insn);
 }"
   [(set_attr "type" "branch")
-   (set_attr "length" "8")])
+   (set_attr "length" "4")])
 
 (define_insn ""
   [(set (pc)
@@ -13184,7 +12825,112 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
   return output_cbranch (operands[0], NULL, 1, insn);
 }"
   [(set_attr "type" "branch")
-   (set_attr "length" "8")])
+   (set_attr "length" "4")])
+
+;; Logic on condition register values.
+
+; This pattern matches things like
+; (set (reg:CCEQ 68) (compare:CCEQ (ior:SI (gt:SI (reg:CCFP 68) (const_int 0))
+;					   (eq:SI (reg:CCFP 68) (const_int 0)))
+;				   (const_int 1)))
+; which are generated by the branch logic.
+
+(define_insn ""
+  [(set (match_operand:CCEQ 0 "cc_reg_operand" "=y")
+        (compare:CCEQ (match_operator:SI 1 "boolean_operator"
+	                [(match_operator:SI 2 
+				      "branch_positive_comparison_operator"
+				      [(match_operand 3
+						      "cc_reg_operand" "y")
+				       (const_int 0)])
+	                 (match_operator:SI 4 
+				      "branch_positive_comparison_operator"
+				      [(match_operand 5
+						      "cc_reg_operand" "y")
+				       (const_int 0)])])
+		      (const_int 1)))]
+  ""
+  "cr%q1 %E0,%j2,%j4"
+  [(set_attr "type" "cr_logical")])
+
+; Why is the constant -1 here, but 1 in the previous pattern?
+; Because ~1 has all but the low bit set.
+(define_insn ""
+  [(set (match_operand:CCEQ 0 "cc_reg_operand" "=y")
+        (compare:CCEQ (match_operator:SI 1 "boolean_or_operator"
+	                [(not:SI (match_operator:SI 2 
+				      "branch_positive_comparison_operator"
+				      [(match_operand 3
+						      "cc_reg_operand" "y")
+				       (const_int 0)]))
+	                 (match_operator:SI 4
+				"branch_positive_comparison_operator"
+				[(match_operand 5
+						"cc_reg_operand" "y")
+				 (const_int 0)])])
+		      (const_int -1)))]
+  ""
+  "cr%q1 %E0,%j2,%j4"
+  [(set_attr "type" "cr_logical")])
+
+(define_insn ""
+  [(set (match_operand:CCEQ 0 "cc_reg_operand" "=y")
+	(compare:CCEQ (match_operator:SI 2 
+				      "branch_positive_comparison_operator"
+				      [(match_operand 3
+						      "cc_reg_operand" "y")
+				       (const_int 0)])
+		      (const_int 0)))]
+  ""
+  "crnot %E0,%j2"
+  [(set_attr "type" "cr_logical")])
+
+;; If we are comparing the result of two comparisons, this can be done
+;; using creqv or crxor.
+
+(define_insn_and_split ""
+  [(set (match_operand:CCEQ 0 "cc_reg_operand" "=y")
+	(compare:CCEQ (match_operator 1 "branch_comparison_operator"
+			      [(match_operand 2 "cc_reg_operand" "y")
+			       (const_int 0)])
+		      (match_operator 3 "branch_comparison_operator"
+			      [(match_operand 4 "cc_reg_operand" "y")
+			       (const_int 0)])))]
+  ""
+  "#"
+  ""
+  [(set (match_dup 0) (compare:CCEQ (xor:SI (match_dup 1) (match_dup 3))
+				    (match_dup 5)))]
+  "
+{
+  int positive_1, positive_2;
+
+  positive_1 = branch_positive_comparison_operator (operands[1], CCEQmode);
+  positive_2 = branch_positive_comparison_operator (operands[3], CCEQmode);
+
+  if (! positive_1)
+    operands[1] = gen_rtx (SImode,
+			   rs6000_reverse_condition (GET_MODE (operands[2]),
+						     GET_CODE (operands[1])),
+			   operands[2]);
+  else if (GET_MODE (operands[1]) != SImode)
+    operands[1] = gen_rtx (SImode,
+			   GET_CODE (operands[1]),
+			   operands[2]);
+
+  if (! positive_2)
+    operands[3] = gen_rtx (SImode,
+			   rs6000_reverse_condition (GET_MODE (operands[4]),
+						     GET_CODE (operands[3])),
+			   operands[4]);
+  else if (GET_MODE (operands[3]) != SImode)
+    operands[3] = gen_rtx (SImode,
+			   GET_CODE (operands[3]),
+			   operands[4]);
+
+  if (positive_1 == positive_2)
+    operands[1] = gen_rtx_NOT (SImode, operands[1]);
+}")
 
 ;; Unconditional branch and return.
 
