* g++.old-deja/g++.pt/deduct2.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36196 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2000-09-06  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.old-deja/g++.pt/deduct2.C: New test.
+
+2000-09-06  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* g++.old-deja/g++.pt/parms2.C: New test.
 
 2000-09-06  Nathan Sidwell  <nathan@codesourcery.com>
