--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-06  Alexandre Oliva  <aoliva@redhat.com>
+
+	* ltconfig, ltmain.sh, libtool.m4, ltcf-c.sh, ltcf-cxx.sh,
+	ltcf-gcj.sh: Updated from libtool multi-language branch.
+
 2000-09-05  Alexandre Oliva  <aoliva@redhat.com>
 
 	* Makefile.in (all-bootstrap): Added all-texinfo and all-zlib.
