--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-09-06  Andreas Schwab  <schwab@suse.de>
+
+	* mklibgcc.in: Emit rule for libgcc-stage-start.
+	* Makefile.in (stage1-start, stage2-start, stage3-start,
+	stage4-start): Don't handle libgcc here, use libgcc.mk instead.
+
 2000-09-06  Bernd Schmidt  <bernds@redhat.co.uk>
 
 	* local-alloc.c (local_alloc): Ignore CLASS_LIKELY_SPILLED.
