* Makefile.in (stage_*): add more dependencies to ensure parallel builds build correctly
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36204 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-06  DJ Delorie  <dj@redhat.com>
+
+	* Makefile.in (stage_*): add more dependencies to ensure parallel
+	builds build correctly
+
 2000-09-06  Manfred Hollstein  <manfredh@redhat.com>
 
 	* Makefile.in (bootstrap-lean): Depend on bootstrap-lean_g,
