* toplev.c (display_help): Fix thinko in documentation.
	* diagnostic.h (output_buffer::indent_skip): New fields.
	(output_indentation): New macro.

	* diagnostic.c (output_indent): New function.
	(output_set_prefix, clear_diagnostic_info): Use.
	(output_emit_prefix): Predict future indentation.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36205 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2000-09-06  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* toplev.c (display_help): Fix thinko in documentation.
+
+	* diagnostic.h (output_buffer::indent_skip): New fields.
+	(output_indentation): New macro.
+
+	* diagnostic.c (output_indent): New function.
+	(output_set_prefix, clear_diagnostic_info): Use.
+	(output_emit_prefix): Predict future indentation.
+
 2000-09-06  DJ Delorie  <dj@redhat.com>
 
 	* Makefile.in (stage_*): add more dependencies to ensure parallel
