--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-09-06  Alexandre Oliva  <aoliva@redhat.com>
 
+	* Makefile.in (all-zlib): Added dummy target.
+
 	* ltconfig, ltmain.sh, libtool.m4, ltcf-c.sh, ltcf-cxx.sh,
 	ltcf-gcj.sh: Updated from libtool multi-language branch.
 
