* java/lang/reflect/natMethod.cc (_Jv_CallAnyMethodA): Accept null 	`args' if method takes no parameters.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36209 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,8 @@
 2000-09-06  Tom Tromey  <tromey@cygnus.com>
 
+	* java/lang/reflect/natMethod.cc (_Jv_CallAnyMethodA): Accept null
+	`args' if method takes no parameters.
+
 	Fix for PR java.lang/339:
 	* java/lang/natPosixProcess.cc (fail): New function.
 	(cleanup): New function.
